--- a/src/ui/prefdialog.ui
+++ b/src/ui/prefdialog.ui
@@ -5,20 +5,390 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>567</width>
-    <height>397</height>
+    <width>577</width>
+    <height>575</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Preference</string>
   </property>
   <layout class="QGridLayout" >
+   <property name="margin" >
+    <number>9</number>
+   </property>
+   <property name="spacing" >
+    <number>6</number>
+   </property>
+   <item row="1" column="0" >
+    <layout class="QVBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QCheckBox" name="wheelCheckBox" >
+       <property name="text" >
+        <string>Alternative Mouse Wheel Control</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="urlCheckBox" >
+       <property name="text" >
+        <string>Detect URL When Mouse Move</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="saveCheckBox" >
+       <property name="text" >
+        <string>Save Message To File</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="blinkCheckBox" >
+       <property name="text" >
+        <string>Blink Tab When Receive Message</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="warnCheckBox" >
+       <property name="text" >
+        <string>Warn When Exit Connected</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="aacheckBox" >
+       <property name="text" >
+        <string>AntiAlias</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="mscheckBox" >
+       <property name="text" >
+        <string>Correct non Mono Space Font (May Extremely Slow)</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="trayCheckBox" >
+       <property name="text" >
+        <string>Show As Tray When Close</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="clearCheckBox" >
+       <property name="text" >
+        <string>Clear ZModem And HTTP Directory When Exit</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="4" column="0" colspan="3" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>11</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="okPushButton" >
+       <property name="text" >
+        <string>OK</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cancelPushButton" >
+       <property name="text" >
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="0" colspan="3" >
+    <widget class="Line" name="Line1" >
+     <property name="frameShape" >
+      <enum>QFrame::HLine</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="3" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>11</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>11</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="textLabel1" >
+         <property name="text" >
+          <string>Zmodem Directory</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="textLabel1_3" >
+         <property name="text" >
+          <string>HTTP Directory</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="textLabel9" >
+         <property name="text" >
+          <string>StyleSheet File</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="TextLabel3" >
+         <property name="text" >
+          <string>HTTP Browser</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="textLabel1_2" >
+         <property name="text" >
+          <string>Image Viewer</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>11</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLineEdit" name="zmodemLineEdit" />
+       </item>
+       <item>
+        <widget class="QLineEdit" name="poolLineEdit" />
+       </item>
+       <item>
+        <widget class="QLineEdit" name="styleSheetLineEdit" />
+       </item>
+       <item>
+        <widget class="QLineEdit" name="httpLineEdit" />
+       </item>
+       <item>
+        <widget class="QLineEdit" name="imageLineEdit" />
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>11</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="browsePushButton" >
+         <property name="text" >
+          <string>Browse</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="poolPushButton" >
+         <property name="text" >
+          <string>Browse</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="styleSheetPushButton" >
+         <property name="text" >
+          <string>Browse</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="choosehttpPushButton" >
+         <property name="text" >
+          <string>Choose</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="imagePushButton" >
+         <property name="text" >
+          <string>Choose</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="2" >
+    <layout class="QVBoxLayout" >
+     <property name="margin" >
+      <number>11</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QGroupBox" name="groupBox" >
+       <property name="title" >
+        <string>Sound When Receive Messages</string>
+       </property>
+       <layout class="QGridLayout" >
+        <property name="margin" >
+         <number>11</number>
+        </property>
+        <property name="spacing" >
+         <number>6</number>
+        </property>
+        <item row="0" column="0" >
+         <widget class="QRadioButton" name="noneRadioButton" >
+          <property name="text" >
+           <string>None</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" >
+         <widget class="QRadioButton" name="beepRadioButton" >
+          <property name="text" >
+           <string>Beep</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2" >
+         <widget class="QRadioButton" name="fileRadioButton" >
+          <property name="text" >
+           <string>Sound File</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="2" >
+         <widget class="QLineEdit" name="wavefileLineEdit" />
+        </item>
+        <item row="1" column="2" >
+         <widget class="QPushButton" name="selectsoundPushButton" >
+          <property name="text" >
+           <string>Configure</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" >
+       <property name="margin" >
+        <number>11</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="TextLabel1" >
+         <property name="text" >
+          <string>Input Method</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="ximComboBox" >
+         <item>
+          <property name="text" >
+           <string>GBK</string>
+          </property>
+         </item>
+         <item>
+          <property name="text" >
+           <string>BIG5</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType" >
+        <enum>QSizePolicy::MinimumExpanding</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="1" >
+    <widget class="Line" name="line" >
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" colspan="3" >
     <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>11</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
      <item>
       <widget class="QLabel" name="TextLabel1_2" >
        <property name="text" >
-        <string>Paste word-wrap at</string>
+        <string>Paste Word-Wrap At</string>
        </property>
       </widget>
      </item>
@@ -70,303 +440,6 @@
         </size>
        </property>
       </spacer>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="0" >
-    <layout class="QVBoxLayout" >
-     <item>
-      <widget class="QCheckBox" name="wheelCheckBox" >
-       <property name="text" >
-        <string>Alternative Mouse Wheel Control</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="urlCheckBox" >
-       <property name="text" >
-        <string>Detect URL When Mouse Move</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="saveCheckBox" >
-       <property name="text" >
-        <string>Save Message To File</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="blinkCheckBox" >
-       <property name="text" >
-        <string>Blink Tab When Receive Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="warnCheckBox" >
-       <property name="text" >
-        <string>Warn When Exit Connected</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="aacheckBox" >
-       <property name="text" >
-        <string>AntiAlias</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="trayCheckBox" >
-       <property name="text" >
-        <string>Show as tray when close</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="clearCheckBox" >
-       <property name="text" >
-        <string>Clear ZModem and HTTP directory when exit</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="1" >
-    <widget class="Line" name="line" >
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="2" >
-    <layout class="QVBoxLayout" >
-     <item>
-      <widget class="QGroupBox" name="groupBox" >
-       <property name="title" >
-        <string>Sound When Receive Messages</string>
-       </property>
-       <layout class="QGridLayout" >
-        <item row="0" column="0" >
-         <widget class="QRadioButton" name="noneRadioButton" >
-          <property name="text" >
-           <string>None</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1" >
-         <widget class="QRadioButton" name="beepRadioButton" >
-          <property name="text" >
-           <string>Beep</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2" >
-         <widget class="QRadioButton" name="fileRadioButton" >
-          <property name="text" >
-           <string>Sound File</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0" colspan="2" >
-         <widget class="QLineEdit" name="wavefileLineEdit" />
-        </item>
-        <item row="1" column="2" >
-         <widget class="QPushButton" name="selectsoundPushButton" >
-          <property name="text" >
-           <string>Configure</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" >
-       <item>
-        <widget class="QLabel" name="TextLabel1" >
-         <property name="text" >
-          <string>Input Method</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="ximComboBox" >
-         <item>
-          <property name="text" >
-           <string>GBK</string>
-          </property>
-         </item>
-         <item>
-          <property name="text" >
-           <string>BIG5</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType" >
-        <enum>QSizePolicy::MinimumExpanding</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
-   <item row="2" column="0" colspan="3" >
-    <layout class="QHBoxLayout" >
-     <item>
-      <layout class="QVBoxLayout" >
-       <item>
-        <widget class="QLabel" name="textLabel1" >
-         <property name="text" >
-          <string>Zmodem directory</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="textLabel1_3" >
-         <property name="text" >
-          <string>HTTP directory</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="textLabel9" >
-         <property name="text" >
-          <string>StyleSheet File</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="TextLabel3" >
-         <property name="text" >
-          <string>HTTP Browser</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="textLabel1_2" >
-         <property name="text" >
-          <string>Image Viewer</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" >
-       <item>
-        <widget class="QLineEdit" name="zmodemLineEdit" />
-       </item>
-       <item>
-        <widget class="QLineEdit" name="poolLineEdit" />
-       </item>
-       <item>
-        <widget class="QLineEdit" name="styleSheetLineEdit" />
-       </item>
-       <item>
-        <widget class="QLineEdit" name="httpLineEdit" />
-       </item>
-       <item>
-        <widget class="QLineEdit" name="imageLineEdit" />
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" >
-       <item>
-        <widget class="QPushButton" name="browsePushButton" >
-         <property name="text" >
-          <string>Browse</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="poolPushButton" >
-         <property name="text" >
-          <string>Browse</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="styleSheetPushButton" >
-         <property name="text" >
-          <string>Browse</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="choosehttpPushButton" >
-         <property name="text" >
-          <string>Choose</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="imagePushButton" >
-         <property name="text" >
-          <string>Choose</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </item>
-   <item row="3" column="0" colspan="3" >
-    <widget class="Line" name="Line1" >
-     <property name="frameShape" >
-      <enum>QFrame::HLine</enum>
-     </property>
-     <property name="frameShadow" >
-      <enum>QFrame::Sunken</enum>
-     </property>
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="3" >
-    <layout class="QHBoxLayout" >
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="okPushButton" >
-       <property name="text" >
-        <string>OK</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cancelPushButton" >
-       <property name="text" >
-        <string>Cancel</string>
-       </property>
-      </widget>
      </item>
     </layout>
    </item>
