--- a/src/ui/aboutdialog.ui
+++ b/src/ui/aboutdialog.ui
@@ -48,6 +48,14 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="tab1" >
+      <property name="geometry" >
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>376</width>
+        <height>194</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>About</string>
       </attribute>
@@ -77,6 +85,14 @@ p, li { white-space: pre-wrap; }
       </layout>
      </widget>
      <widget class="QWidget" name="tab2" >
+      <property name="geometry" >
+       <rect>
+        <x>77</x>
+        <y>97</y>
+        <width>944</width>
+        <height>522</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Authors</string>
       </attribute>
@@ -96,6 +112,14 @@ devilphoenix@newsmth</string>
       </layout>
      </widget>
      <widget class="QWidget" name="tab3" >
+      <property name="geometry" >
+       <rect>
+        <x>100</x>
+        <y>120</y>
+        <width>944</width>
+        <height>522</height>
+       </rect>
+      </property>
       <attribute name="title" >
        <string>Credits</string>
       </attribute>
@@ -103,7 +127,8 @@ devilphoenix@newsmth</string>
        <item row="0" column="0" >
         <widget class="QTextBrowser" name="TextBrowser" >
          <property name="html" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+          <string>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
+&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'SimSun'; font-size:9pt; font-weight:400; font-style:normal;">
 &lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>&lt;/body>&lt;/html></string>
@@ -124,7 +149,6 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
- <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <tabstops>
   <tabstop>closeButton</tabstop>
   <tabstop>mainTabWidget</tabstop>
