--- a/src/ui/addrdialog.ui
+++ b/src/ui/addrdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>479</width>
-    <height>360</height>
+    <width>493</width>
+    <height>383</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,11 +30,11 @@
    <item row="1" column="1">
     <widget class="QPushButton" name="applyPushButton">
      <property name="text">
-      <string>&amp;OK</string>
+      <string>Apply (&amp;Temporarily)</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="1" column="3">
     <widget class="QPushButton" name="closePushButton">
      <property name="text">
       <string>&amp;Cancel</string>
@@ -47,7 +47,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="3">
+   <item row="0" column="0" colspan="4">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -296,6 +296,11 @@
            <string>UTF8</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>BIG5-HKSCS</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="1" column="0" colspan="2">
@@ -312,7 +317,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0" rowspan="4" colspan="4">
+       <item row="4" column="0" rowspan="4" colspan="4">
         <widget class="QLabel" name="fontPreviewer">
          <property name="autoFillBackground">
           <bool>true</bool>
@@ -325,49 +330,6 @@
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="4">
-        <widget class="QToolButton" name="fontToolButton">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>Font</string>
-         </property>
-         <property name="popupMode">
-          <enum>QToolButton::InstantPopup</enum>
-         </property>
-         <property name="toolButtonStyle">
-          <enum>Qt::ToolButtonTextOnly</enum>
-         </property>
-         <property name="arrowType">
-          <enum>Qt::DownArrow</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="4">
-        <widget class="QPushButton" name="fgcolorPushButton">
-         <property name="text">
-          <string>Text Color</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="4">
-        <widget class="QPushButton" name="bgcolorPushButton">
-         <property name="text">
-          <string>Background</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="4">
-        <widget class="QPushButton" name="schemaPushButton">
-         <property name="text">
-          <string>Schema</string>
          </property>
         </widget>
        </item>
@@ -422,6 +384,45 @@
            <string>Align Top</string>
           </property>
          </item>
+        </widget>
+       </item>
+       <item row="7" column="4">
+        <widget class="QComboBox" name="schemaComboBox"/>
+       </item>
+       <item row="6" column="4">
+        <widget class="QPushButton" name="bgcolorPushButton">
+         <property name="text">
+          <string>Background</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="4">
+        <widget class="QPushButton" name="fgcolorPushButton">
+         <property name="text">
+          <string>Text Color</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="4">
+        <widget class="QToolButton" name="fontToolButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Font</string>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextOnly</enum>
+         </property>
+         <property name="arrowType">
+          <enum>Qt::DownArrow</enum>
+         </property>
         </widget>
        </item>
       </layout>
@@ -812,21 +813,21 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0" colspan="2">
+       <item row="6" column="0" colspan="2">
         <widget class="QCheckBox" name="scriptCheckBox">
          <property name="text">
           <string>Load Control Script</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0" colspan="3">
+       <item row="7" column="0" colspan="3">
         <widget class="QLineEdit" name="scriptLineEdit">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="6" column="3" colspan="2">
+       <item row="7" column="3" colspan="2">
         <widget class="QPushButton" name="scriptPushButton">
          <property name="enabled">
           <bool>false</bool>
@@ -836,24 +837,31 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QCheckBox" name="zmodemCheck">
          <property name="text">
           <string>Enable Zmodem</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="3">
+       <item row="8" column="3">
         <widget class="QCheckBox" name="buzzCheck">
          <property name="text">
           <string>Enable Buzz</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="2">
+       <item row="8" column="2">
         <widget class="QCheckBox" name="beepCheck">
          <property name="text">
           <string>Enable Beep</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0" colspan="3">
+        <widget class="QCheckBox" name="autoCloseWinCheckBox">
+         <property name="text">
+          <string>When disconnected, close window automatically</string>
          </property>
         </widget>
        </item>
@@ -938,6 +946,13 @@
      </widget>
     </widget>
    </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="savePushButton">
+     <property name="text">
+      <string>&amp;Apply (Save)</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
@@ -954,9 +969,6 @@
   <tabstop>bbscodeComboBox</tabstop>
   <tabstop>autofontCheckBox</tabstop>
   <tabstop>highlightCheckBox</tabstop>
-  <tabstop>fgcolorPushButton</tabstop>
-  <tabstop>bgcolorPushButton</tabstop>
-  <tabstop>schemaPushButton</tabstop>
   <tabstop>termtypeLineEdit</tabstop>
   <tabstop>keytypeComboBox</tabstop>
   <tabstop>columnLineEdit</tabstop>
@@ -971,6 +983,7 @@
   <tabstop>reconnectCheckBox</tabstop>
   <tabstop>reconnectLineEdit</tabstop>
   <tabstop>retryLineEdit</tabstop>
+  <tabstop>autoCloseWinCheckBox</tabstop>
   <tabstop>scriptCheckBox</tabstop>
   <tabstop>scriptLineEdit</tabstop>
   <tabstop>scriptPushButton</tabstop>
