--- a/src/ui/prefdialog.ui
+++ b/src/ui/prefdialog.ui
@@ -264,6 +264,58 @@
       </layout>
      </item>
      <item>
+      <widget class="QGroupBox" name="verticalDisplayGroupBox">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="title">
+        <string>Vertical Display</string>
+       </property>
+       <widget class="QRadioButton" name="topRadioButton">
+        <property name="geometry">
+         <rect>
+          <x>11</x>
+          <y>15</y>
+          <width>84</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Top</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="middleRadioButton">
+        <property name="geometry">
+         <rect>
+          <x>123</x>
+          <y>15</y>
+          <width>84</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Middle</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="bottomRadioButton">
+        <property name="geometry">
+         <rect>
+          <x>234</x>
+          <y>15</y>
+          <width>84</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Bottom</string>
+        </property>
+       </widget>
+      </widget>
+     </item>
+     <item>
       <spacer>
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -274,7 +326,7 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>287</width>
-         <height>58</height>
+         <height>28</height>
         </size>
        </property>
       </spacer>
